# astra-rpa

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  BUILD_GUIDE.zh.md  FAQ.md  FAQ.zh.md  MACOS_PLAN.zh.md  Makefile  NOTICE  README.md  README.zh.md  TODO.md  build.bat
backend/openapi-service/: .dockerignore  .env.example  .ruff.toml  Dockerfile  README.md  README.zh.md  api.yaml  pyproject.toml  run.py
backend/openapi-service/app/: config.py  database.py  logger.py  main.py  redis.py
backend/openapi-service/app/dependencies/: __init__.py
backend/openapi-service/app/middlewares/: tracing.py
backend/openapi-service/app/models/: api_key.py  user.py  workflow.py
backend/openapi-service/app/routers/: api_keys.py  executions.py  healthcheck.py  streamable_mcp.py  user.py  websocket.py  workflows.py
backend/openapi-service/app/schemas/: api_key.py  user.py  workflow.py
backend/openapi-service/app/services/: api_key.py  execution.py  streamable_mcp.py  user.py  websocket.py  workflow.py
backend/openapi-service/app/utils/: api_key.py  rpawebsocket-1.0.5-py3-none-any.whl  rpawebsocket-1.0.6-py3-none-any.whl  rpawebsocket-1.0.7-py3-none-any.whl
backend/openapi-service/tests/: conftest.py  test_main.py
backend/openapi-service/tests/routers/: test_api_keys.py  test_e2e.py  test_executions.py  test_items.py  test_workflows.py
engine/: .env.example  .gitignore  AGENTS.md  README.md  README.zh.md  REFACTOR_PROMPT.md  main.py  meta_json.py  pyproject.toml  requirements.txt
engine/binaries/native_messaging/: README.md  go.mod  go.sum  main.go
engine/binaries/native_messaging/internal/: config.go  ipc_linux.go  ipc_windows.go  logger.go  service.go  stdio.go
engine/binaries/router/: .gitignore  README.md  go.mod  go.sum  main.go
engine/binaries/router/proxy/: cookie.go  logger.go  option.go  proxy.go  proxy_http.go  proxy_ws.go
engine/components/: DEVELOPMENT.md  DEVELOPMENT.zh.md  README.md  README.zh.md
engine/components/astronverse-ai/: .pylintrc  config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-browser/: config.yaml  config_type.yaml  meta.json  meta.py  meta_type.json  pyproject.toml
engine/components/astronverse-browser/tests/: test_browser_open_demo.py
engine/components/astronverse-cua/: .gitignore  config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-database/: meta.py  pyproject.toml
engine/components/astronverse-dataprocess/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-dataprocess/tests/: test_data.py  test_dataconvert.py  test_dict.py  test_list.py  test_math.py  test_string.py  test_time.py
engine/components/astronverse-datatable/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-datatable/tests/: test_datatable.py  test_openpyxl.py
engine/components/astronverse-dialog/: .pylintrc  config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-email/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-email/tests/: test_core_imap4_receive.py  test_receive_email.py
engine/components/astronverse-encrypt/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-encrypt/tests/: test_encrypt.py
engine/components/astronverse-enterprise/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-enterprise/tests/: test_enterprise.py
engine/components/astronverse-excel/: config.yaml  config_type.yaml  meta.json  meta.py  meta_type.json  pyproject.toml
engine/components/astronverse-hello/: .gitignore  config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-hello/tests/: test_hello.py
engine/components/astronverse-input/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-input/tests/: test.py  test_mouse.py
engine/components/astronverse-network/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-openapi/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-openapi/tests/: test_gateway_client.py  test_nlp_text_correction.py  test_nlp_text_correction_atomic_meta.py  (+9 more)
engine/components/astronverse-pdf/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-report/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-script/: .gitignore  config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-smart/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-software/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-system/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-translate/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-verifycode/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-vision/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-window/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-winelement/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-word/: config.yaml  config_type.yaml  meta.json  meta.py  meta_type.json  pyproject.toml
engine/servers/astronverse-browser-bridge/: pyproject.toml
engine/servers/astronverse-executor/: pyproject.toml
engine/servers/astronverse-picker/: pyproject.toml
engine/servers/astronverse-scheduler/: pyproject.toml
engine/servers/astronverse-trigger/: pyproject.toml
engine/servers/astronverse-vision-picker/: pyproject.toml
engine/shared/astronverse-actionlib/: config_type.yaml  pyproject.toml
engine/shared/astronverse-baseline/: pyproject.toml
engine/shared/astronverse-browser-plugin/: pyproject.toml
engine/shared/astronverse-locator/: pyproject.toml
engine/shared/astronverse-websocket-client/: pyproject.toml
engine/shared/astronverse-websocket-server/: pyproject.toml
engine/shared/astronverse-workflowlib/: main.py  model.py  pyproject.toml
(+1599 files in other folders)
