[project]
name = "astronverse-cua"
version = "1.0.1"
description = "astronverse-cua."
requires-python = ">=3.13"

dependencies = [
    "requests",
    "pyautogui",
    "pillow",
    "openai",
    "pyperclip",
    "astronverse-actionlib"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


