[project]
name = "astronverse-dataprocess"
version = "1.0.2"
description = "astronverse-dataprocess."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "numpy",
    "python-dateutil"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
