[project]
name = "astronverse-email"
version = "1.0.2"
description = "astronverse-email."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
