[project]
name = "astronverse-input"
version = "1.0.1"
description = "astronverse-input."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "pyautogui",
    "pyperclip",
    "pynput",
    "pywin32; sys_platform == 'win32'",
    "Pillow; sys_platform == 'linux'"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
