[project]
name = "astronverse-openapi"
version = "1.0.1"
description = "astronverse-openapi."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "requests",
    "openpyxl"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
