[project]
name = "astronverse-pdf"
version = "1.0.1"
description = "astronverse-pdf."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "pypdf",
    "python-docx",
    "pdfplumber",
    "pandas",
    "openpyxl",
    "pypdfium2",
    "Pillow"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
