[project]
name = "astronverse-browser-bridge"
version = "1.0.1"
description = "astronverse-browser-bridge."
requires-python = ">=3.13"

dependencies = [
    "astronverse-baseline",
    "astronverse-websocket-server",
    "starlette",
    "uvicorn",
    "fastapi",
    "no-config",
]

[tool.uv.sources]
astronverse-baseline = {path = "../../shared/astronverse-baseline", editable = true}
astronverse-websocket-server = {path = "../../shared/astronverse-websocket-server", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"