[project]
name = "astronverse-picker"
version = "1.0.2"
description = "astronverse-picker."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "astronverse-locator",
    "websockets",
    "anyio",
    "astor",
    "pydantic",
    "psutil",
    "requests",
    "pyautogui",
    "pandas",
    "beautifulsoup4",
    "pyWinhook; sys_platform == 'win32'",
    "pywin32; sys_platform == 'win32'",
    "uiautomation; sys_platform == 'win32'",
    "pythonnet; sys_platform == 'win32'",
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}
astronverse-locator = {path = "../../shared/astronverse-locator", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"